<resources>
    <string name="app_name">Konsul Dok</string>
    <string name="mustFillPhoneEmail">Nomor telphone atau Email wajib Diisi</string>
    <string name="mustFillOldPassword">Password Lama Wajib Di Isi</string>
    <string name="mustFillPassword">Password wajib Diisi</string>
    <string name="mustFillConfirmPassword">Confirm Password wajib Diisi</string>
    <string name="mustFillName">Nama wajib Diisi</string>
    <string name="mustFillPhone">Nomor Telephone Wajib di isi</string>
    <string name="mustFillKecamatan">Kecamatan Wajib di isi</string>
    <string name="mustFillEmail">Email Wajib di isi</string>
    <string name="welcome_to_konsul_dok">Welcome to “Konsul-Dok!”</string>
    <string name="dummy_Lore_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in_to_get_started">Sign in to get started</string>
    <string name="email_or_phone_number">Email or Phone number</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="create_an_account">Create an Account</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account_login_now">Have an account? Login Now</string>
    <string name="passwrord_tidak_sama">Passwrord Tidak Sama</string>
    <string name="password_min_length">Passwrord Minimal 8 Karakter</string>
    <string name="image_profile">Image Profile</string>
    <string name="dokter_sebelumnya">Dokter Sebelumnya</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="button_back">Button Back</string>
    <string name="person_name">Person Name</string>
    <string name="saved_doctor">Saved Doctor</string>
    <string name="saved">Saved</string>
    <string name="address">Address</string>
    <string name="buat_janji_temu">Buat Janji Temu</string>
    <string name="save">Save</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="button_edit">Button Edit</string>
    <string name="msg_token_fmt" formatted="true"> %s Token Confirmed</string>
    <string name="icon_nama">Icon Nama</string>
    <string name="icon_email">Icon Email</string>
    <string name="icon_phone">Icon Phone</string>
    <string name="icon_kecamatan">Icon Kecamatan</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="note_reservation_failed">Gagal Memilih Waktu \n Maaf Anda Hanya Bisa Membuat Reservasi Untuk Pukul 09.00 Hingga 17.00</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_your_password_here">Reset Your Password Here</string>
    <string name="description">Description</string>
    <string name="category_doctor">Category Doctor</string>
    <string name="alasan_keluhan">Alasan Keluhan :</string>
    <string name="waktu_janji_temu">Waktu Janji Temu :</string>
    <string name="buat_janji">Buat Janji</string>
    <string name="ubah_waktu">Ubah Waktu</string>
    <string name="category">Category</string>
    <string name="filter">Filter</string>
    <string name="waktu_reservasi">Waktu Reservasi</string>
    <string name="keluhan_sakit">Keluhan Sakit</string>
    <string name="status_reservasi">Status Reservasi</string>
    <string name="tidak">Tidak</string>
    <string name="ya_saya_ingin_keluar">Ya, Saya ingin keluar</string>
    <string name="apakah_anda_yakin_akan_logout">Apakah Anda Yakin Akan Logout</string>
    <string name="anda_belum_pernah_memesan_dokter">Anda Belum Pernah Memesan Dokter</string>
    <string name="search">Search</string>
    <string name="dokter_tidak_di_temukan">Dokter tidak di temukan</string>
    <string name="status">Status :</string>
</resources>