<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.bennohan.mydoctorapp.data.user.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".ui.profile.ProfileActivity">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@null"
            android:contentDescription="@string/button_back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            imageUrlCircle='@{user.photo}'
            android:contentDescription="@string/image_profile"
            android:src="@drawable/ic_baseline_person_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_profileNew"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            android:contentDescription="@string/image_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="110dp"
            app:cardCornerRadius="100dp"
            android:backgroundTint="#D4D4D4"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile"
            app:layout_constraintStart_toStartOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile">

            <ImageButton
                android:id="@+id/btnEditPhoto"
                android:layout_width="30dp"
                android:src="@drawable/ic_baseline_edit_grey"
                android:layout_height="30dp" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/iv_profile">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icon_nama"
                android:src="@drawable/ic_baseline_person_black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{user.name}'
                    android:background="@null"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/person_name" />

            </LinearLayout>

            <ImageView
                android:id="@+id/btn_editNama"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/button_edit"
                android:src="@drawable/ic_baseline_edit_24" />

<!--            <ImageView-->
<!--                android:id="@+id/btn_editNamaChecklist"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:contentDescription="@string/button_edit"-->
<!--                android:src="" />-->


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_name">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icon_email"
                android:src="@drawable/ic_baseline_email_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{user.email}'
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/person_name" />

            </LinearLayout>

            <ImageView
                android:id="@+id/btn_editEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/button_edit"
                android:src="@drawable/ic_baseline_edit_24" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layoutEmail">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icon_phone"
                android:src="@drawable/ic_baseline_phone_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{user.phone}'
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/person_name" />

            </LinearLayout>

            <ImageView
                android:id="@+id/btn_editTelephone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/button_edit"
                android:src="@drawable/ic_baseline_edit_24" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_kecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layoutPhone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icon_kecamatan"
                android:src="@drawable/ic_baseline_apartment_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kecamatan"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_kecamatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/person_name" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/button_edit"
                android:src="@drawable/ic_baseline_edit_24" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_green"
            android:text="@string/save"
            android:textAllCaps="false"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnLogout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/main_color_red"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
