<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".ui.forgotPassword.PasswordActivity">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:foreground="@drawable/ripple_effect"
            android:background="@null"
            android:contentDescription="@string/button_back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password_here"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />


        <TextView
            android:id="@+id/tv_email_or_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_resetPassword" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_oldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_or_phone">

            <EditText
                android:id="@+id/et_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autofillHints="phone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_oldPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNewPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_newPassword"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_NewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirmPassword"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_passwordNotMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwrord_tidak_sama"
            android:textColor="@color/text_red"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword" />

        <TextView
            android:id="@+id/tv_passwordMinLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_min_length"
            android:textColor="@color/text_red"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:background="@drawable/background_card"
            android:backgroundTint="@color/main_color_red"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
